--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ resolver = "2"
 
 [workspace.dependencies]
 anyhow = "1.0.86"
-axum = { version = "0.7.5", features = ["http2", "query", "tracing", "multipart"] }
+axum = { version = "0.7.5", features = ["http2", "query", "tracing", "multipart", "macros"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_yaml = "0.9.34"
 sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"] }
