--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -10,13 +10,18 @@ anyhow = { workspace = true }
 argon2 = { version = "0.5.3", features = ["std"] }
 axum = { workspace = true }
 chrono = { version = "0.4.38", features = ["serde"] }
+jwt-simple = { version = "0.12.9", features = ["pure-rust"], default-features = false }
 serde = { workspace = true }
+serde_json = "1.0.120"
 serde_yaml = { workspace = true }
 sqlx = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
+tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+sqlx-db-tester = "0.4.2"
 
 [dev-dependencies]
+http-body-util = "0.1.2"
 sqlx-db-tester = "0.4.2"
