--- a/notify_server/Cargo.toml
+++ b/notify_server/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = { workspace = true }
 axum = { workspace = true }
 axum-extra = { version = "0.9.3", features = ["typed-header"] }
 futures = "0.3.30"
+futures-util = "0.3.30"
 serde = { workspace = true }
 serde_yaml = { workspace = true }
 sqlx = { workspace = true }
