--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -17,10 +17,13 @@ serde_yaml = { workspace = true }
 sqlx = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
-tower-http = { version = "0.5.2", features = ["trace"] }
+tower-http = { version = "0.5.2", features = ["trace", "compression-full"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 sqlx-db-tester = "0.4.2"
+uuid = { version = "1.10.0", features = ["v7", "serde"] }
+tower = "0.4.13"
+axum-extra = { version = "0.9.3", features = ["typed-header"] }
 
 [dev-dependencies]
 http-body-util = "0.1.2"
