feature: add jwt middleware test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 members = [
-    "chat_server"
-    , "notify_server"]
+    "chat_server",
+    "notify_server"
+]
 resolver = "2"
 
 [workspace.dependencies]
