feature: support message api

--- a/chat_server/Cargo.toml
+++ b/chat_server/Cargo.toml
@@ -24,6 +24,9 @@ sqlx-db-tester = "0.4.2"
 uuid = { version = "1.10.0", features = ["v7", "serde"] }
 tower = "0.4.13"
 axum-extra = { version = "0.9.3", features = ["typed-header"] }
+sha1 = "0.10.6"
+tokio-util = "0.7.11"
+mime_guess = "2.0.5"
 
 [dev-dependencies]
 http-body-util = "0.1.2"
