--- a/notify_server/Cargo.toml
+++ b/notify_server/Cargo.toml
@@ -7,13 +7,16 @@ edition = "2021"
 anyhow = { workspace = true }
 axum = { workspace = true }
 axum-extra = { version = "0.9.3", features = ["typed-header"] }
+chat_core = { workspace = true }
+dashmap = "6.0.1"
 futures = "0.3.30"
 futures-util = "0.3.30"
+jwt-simple = { workspace = true }
 serde = { workspace = true }
 serde_yaml = { workspace = true }
 sqlx = { workspace = true }
 thiserror = { workspace = true }
-tokio = { workspace = true }
+tokio = { workspace = true, features = ["sync"] }
 tokio-stream = "0.1.15"
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
