--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,16 @@ resolver = "2"
 [workspace.dependencies]
 anyhow = "1.0.86"
 axum = { version = "0.7.5", features = ["http2", "query", "tracing", "multipart", "macros"] }
+axum-extra = { version = "0.9.3", features = ["typed-header"] }
+chrono = { version = "0.4.38", features = ["serde"] }
+jwt-simple = { version = "0.12.9", features = ["pure-rust"], default-features = false }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_yaml = "0.9.34"
 sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"] }
 thiserror = "1.0.61"
 tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
+tower = "0.4.13"
+tower-http = { version = "0.5.2", features = ["trace", "compression-full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+chat_core = { path = "./chat_core" }
