--- a/chat_core/Cargo.toml
+++ b/chat_core/Cargo.toml
@@ -4,3 +4,21 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = { workspace = true }
+argon2 = { version = "0.5.3", features = ["std"] }
+axum = { workspace = true }
+axum-extra = { workspace = true }
+chrono = { workspace = true }
+jwt-simple = { workspace = true }
+serde = { workspace = true }
+sqlx = { workspace = true }
+thiserror = { workspace = true }
+tokio = { workspace = true }
+tower = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+uuid = { version = "1.10.0", features = ["v7", "serde"] }
+
+[dev-dependencies]
+http-body-util = "0.1.2"
+sqlx-db-tester = "0.4.2"
