--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = ["chat_core",
-    "chat_server",
+    "chat_server", "chat_test",
     "notify_server"
 ]
 resolver = "2"
@@ -21,3 +21,5 @@ tower-http = { version = "0.5.2", features = ["trace", "compression-full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 chat_core = { path = "./chat_core" }
+chat_server = { path = "./chat_server" }
+notify_server = { path = "./notify_server" }
