--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,10 @@ anyhow = "1.0.86"
 axum = { version = "0.7.5", features = ["http2", "query", "tracing", "multipart", "macros"] }
 axum-extra = { version = "0.9.3", features = ["typed-header"] }
 chrono = { version = "0.4.38", features = ["serde"] }
+futures = "0.3.30"
 jwt-simple = { version = "0.12.9", features = ["pure-rust"], default-features = false }
 serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
 serde_yaml = "0.9.34"
 sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"] }
 thiserror = "1.0.61"
