--- a/chat_test/Cargo.toml
+++ b/chat_test/Cargo.toml
@@ -5,9 +5,16 @@ edition = "2021"
 
 [dependencies]
 
+
 [dev-dependencies]
-anyhow.workspace = true
-chat_core.workspace = true
-chat_server.workspace = true
-notify_server.workspace = true
-serde.workspace = true
+anyhow = { workspace = true }
+axum = { workspace = true }
+chat_core = { workspace = true }
+chat_server = { workspace = true, features = ["test-util"] }
+futures = { workspace = true }
+notify_server = { workspace = true }
+reqwest = { version = "0.12.5", features = ["rustls-tls", "json", "multipart"] }
+reqwest-eventsource = "0.6.0"
+serde = { workspace = true }
+serde_json = { workspace = true }
+tokio = { workspace = true }
