--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ tower = "0.4.13"
 tower-http = { version = "0.5.2", features = ["trace", "compression-full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "uuid"] }
+utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
+utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
+utoipa-redoc = { version = "4.0.0", features = ["axum"] }
 chat_core = { path = "./chat_core" }
 chat_server = { path = "./chat_server" }
 notify_server = { path = "./notify_server" }
