--- a/chat_core/Cargo.toml
+++ b/chat_core/Cargo.toml
@@ -18,6 +18,7 @@ tower = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 uuid = { version = "1.10.0", features = ["v7", "serde"] }
+utoipa = { workspace = true }
 
 [dev-dependencies]
 http-body-util = "0.1.2"
